--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
         <li>
           <img src="img/slider/1.png"> 
           <div class="caption left-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+            <h3>Tingkatkan Skill!</h3>
+            <h5 class="light grey-text text-lighten-3">Never Give Up</h5>
           </div>
         </li>
         <li>
           <img src="img/slider/2.png"> 
           <div class="caption right-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+            <h3>Belajar Dengan Giat!</h3>
+            <h5 class="light grey-text text-lighten-3">Never Give Up</h5>
           </div>
         </li>
         <li>
           <img src="img/slider/3.png"> 
           <div class="caption center-align">
-            <h3>This is our big Tagline!</h3>
-            <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+            <h3>Kemauan Yang Tinggi!</h3>
+            <h5 class="light grey-text text-lighten-3">HNever Give Up</h5>
           </div>
         </li>
       </ul>
