--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img src="img/slider/3.png"> 
           <div class="caption center-align">
             <h3>Kemauan Yang Tinggi!</h3>
-            <h5 class="light grey-text text-lighten-3">HNever Give Up</h5>
+            <h5 class="light grey-text text-lighten-3">Never Give Up</h5>
           </div>
         </li>
       </ul>
