--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <h3 class="center light grey-text text-darken-3">About Us</h3>
           <div class="col m6">
             <h5>We Are Professional</h5>
-            <p>Perkenalkan Nama Saya Muhammad Ivan Chriana,Jurusa Saya TKJ.Saya Memiliki Skill Bahasa HTML,CSS,JavaScript, dan PHP.Untuk Framework Saya menggunakan Bootstrap,Materialize dan Codeigniter.
+            <p>Perkenalkan Nama Saya Muhammad Ivan Chriana,Jurusan Saya TKJ.Saya Memiliki Skill Bahasa HTML,CSS,JavaScript, dan PHP.Untuk Framework Saya menggunakan Bootstrap,Materialize dan Codeigniter.
             </p>
           </div>
           <div class="col m6 light">
