--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
           <h3 class="center light grey-text text-darken-3">About Us</h3>
           <div class="col m6">
             <h5>We Are Professional</h5>
-            <p>Perkenalkan Nama Saya Muhammad Ivan Chriana,Jurusan Saya TKJ.Saya Memiliki Skill Bahasa HTML,CSS,JavaScript, dan PHP.Untuk Framework Saya menggunakan Bootstrap,Materialize dan Codeigniter.
+            <p>Saya adalah seorang Web developer, Pentester ataupun Network Engineer, Saya senang jika Saya  dapat bekerja dalam tim maupun individu. Saya Memiliki Skill Yaitu: HTML,CSS,JavaScript, dan PHP.Untuk Framework Saya menggunakan Bootstrap,Materialize dan VueJS.
             </p>
           </div>
           <div class="col m6 light">
-              <p>WEB DEVELOPMENT</p>
+              <p>WEB DEVELOPMENT - Junior</p>
                 <div class="progress">
                   <div class="determinate" style="width: 90%"></div>
               </div>
-              <p>MOBILE APP DEVELOPMENT</p>
-                <div class="progress">
-                  <div class="determinate" style="width: 30%"></div>
-              </div>
-              <p>GAME DEVELOPMENT</p>
+              <p>CYBER SECURITY - Junior</p>
                 <div class="progress">
                   <div class="determinate" style="width: 50%"></div>
+              </div>
+              <p>Amazon AWS Cloud - Junior</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 30%"></div>
               </div>
             </div>
           </div>
@@ -137,16 +137,16 @@
           <div class="col m4 s12">
             <div class="card-panel center">
               <i class="material-icons medium">developer_mode</i>
-              <h5>Mobile App </h5>
+              <h5>Cyber Security </h5>
               <p>
-                is the act or process of developing a mobile application for a mobile device, such as personal digital assistants, corporate digital assistants or cell phones.</p>
+                Cybersecurity or IT security is information security that is applied to computers and their networks. Computer security aims to help users prevent fraud or detect fraud attempts in an information-based system.</p>
             </div>
           </div>
           <div class="col m4 s12">
             <div class="card-panel center">
               <i class="material-icons medium">games</i>
-              <h5>Game Development</h5>
-              <p>is a software developer that specializes in video game development - the processes and disciplines associated with creating video games.</p>
+              <h5>Amazon AWS Cloud</h5>
+              <p>Amazon Web Services is a collection of services based on Cloud Computing provided by Amazon since 2002. Although one of the internet giants we often know to buy books and songs, now Amazon has added its services in terms of cloud computing infrastructure.</p>
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
 
     <section id="portfolio" class="portfolio scrollspy">
       <div class="container">
-        <h3 class="light center grey-text text-darken-3">Portfolio</h3>
+        <h3 class="light center grey-text text-darken-3">Sertifikat</h3>
         <div class="row">
           <div class="col m3 s12">
             <img src="img/portfolio/1.png" class="responsive-img materialboxed">
