--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
             </p>
           </div>
           <div class="col m6 light">
-              <p>WEB DEVELOPMENT - Junior</p>
+              <p>WEB DEVELOPMENT - Beginner</p>
                 <div class="progress">
-                  <div class="determinate" style="width: 90%"></div>
+                  <div class="determinate" style="width: 70%"></div>
               </div>
               <p>CYBER SECURITY - Junior</p>
                 <div class="progress">
                   <div class="determinate" style="width: 50%"></div>
               </div>
-              <p>Amazon AWS Cloud - Junior</p>
+              <p>Network Engineer - Intermediate</p>
                 <div class="progress">
-                  <div class="determinate" style="width: 30%"></div>
+                  <div class="determinate" style="width: 90%"></div>
               </div>
             </div>
           </div>
@@ -126,27 +126,27 @@
     <section id="services" class="services grey lighten-3 scrollspy">
       <div class="container">
         <div class="row">
-          <h3 class="light center gray-text text-darken-3">Our Services</h3>
+          <h3 class="light center gray-text text-darken-3">Services</h3>
           <div class="col m4 s12">
             <div class="card-panel center">
               <i class="material-icons medium">desktop_windows</i>
               <h5>Web Development</h5>
-              <p>is a programmer who specializes in, or is specifically involved in, developing World Wide Web applications using the client – ​​server model.</p>
+              <p>is a programmer who specializes in, or is specifically involved in, developing World Wide Web applications using the client – ​​server model. <br><br><br><br></p>
             </div>
           </div>
           <div class="col m4 s12">
             <div class="card-panel center">
-              <i class="material-icons medium">developer_mode</i>
+              <i class="material-icons medium">desktop_windows</i>
               <h5>Cyber Security </h5>
               <p>
-                Cybersecurity or IT security is information security that is applied to computers and their networks. Computer security aims to help users prevent fraud or detect fraud attempts in an information-based system.</p>
+                Cybersecurity or IT security is information security that is applied to computers and their networks. Computer security aims to help users prevent fraud or detect fraud attempts in an information-based system.<br><br></p>
             </div>
           </div>
           <div class="col m4 s12">
             <div class="card-panel center">
-              <i class="material-icons medium">games</i>
-              <h5>Amazon AWS Cloud</h5>
-              <p>Amazon Web Services is a collection of services based on Cloud Computing provided by Amazon since 2002. Although one of the internet giants we often know to buy books and songs, now Amazon has added its services in terms of cloud computing infrastructure.</p>
+              <i class="material-icons medium">desktop_windows</i>
+              <h5>Network Engineer</h5>
+              <p>Network Engineer (NE) is a person whose job is to build a network in an organization or company. In addition, they are also in charge of designing, implementing, and performing maintenance so that the network does not experience problems.</p>
             </div>
           </div>
         </div>
@@ -162,30 +162,38 @@
         <h3 class="light center grey-text text-darken-3">Sertifikat</h3>
         <div class="row">
           <div class="col m3 s12">
-            <img src="img/portfolio/1.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/SERTIFIKAT_ORACLE_ACADEMY_DEPAN.jpg" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
-            <img src="img/portfolio/2.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/SERTIFICAT_ORACLE_BELAKANG.jpg" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
-            <img src="img/portfolio/3.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/SERTIFIKAT_KOMPETENSI.jpg" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
-            <img src="img/portfolio/4.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/SERTIFIKAT_KOMPETENSI_BELAKANG.jpg" class="responsive-img materialboxed">
           </div>
         </div>
         <div class="row">
           <div class="col m3 s12">
-            <img src="img/portfolio/5.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/cybersecuritysertif.png" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
-            <img src="img/portfolio/6.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/CyberSecurityWork&Adapt.png" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
-            <img src="img/portfolio/1.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/Indeks_Keamanan_Informasi.jpg" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
-            <img src="img/portfolio/2.png" class="responsive-img materialboxed">
+            <img src="img/portfolio/Sertif_Arstekture_AWS.jpg" class="responsive-img materialboxed">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col m3 s12">
+            <img src="img/portfolio/Sertif_Dasar_Programan_Web.jpg" class="responsive-img materialboxed">
+          </div>
+          <div class="col m3 s12">
+            <img src="img/portfolio/Sertif_Cloud_Practitioner.jpg" class="responsive-img materialboxed">
           </div>
         </div>
       </div>
