--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#about">Abot Us</a></li>
           <li><a href="#clients">Client</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#portfolio">Sertifikat</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </div>
@@ -40,7 +40,7 @@
     <li><a href="#about">About Us</a></li>
     <li><a href="#clients">Client</a></li>
     <li><a href="#services">Services</a></li>
-    <li><a href="#portfolio">Portfolio</a></li>
+    <li><a href="#portfolio">Sertifikat</a></li>
     <li><a href="#contact">Contact Us</a></li> 
   </ul>
 
@@ -155,7 +155,7 @@
 
 
 
-    <!-- Portfolio -->
+    <!-- Sertifikat -->
 
     <section id="portfolio" class="portfolio scrollspy">
       <div class="container">
@@ -210,12 +210,12 @@
             <div class="card-panel blue darken-2 center white-text">
               <i class="material-icons">email</i>
               <h5>Contact</h5>
-              <p>Bila Anda Butuh Bantuan,Bisa Langsung Hubungi Kami.</p>
+              <p>Bila Anda Butuh Bantuan,Bisa Langsung Hubungi Saya Ke +62822-1648-5340.</p>
             </div>
             <ul class="collection with-header">
             <li class="collection-header center"><h4>My Address</h4></li>
-            <li class="collection-item">Web Programming Van </li>
-            <li class="collection-item">Jl.Sukadamai Blok Pahing No.35, Cirebon</li>
+            <li class="collection-item">Muhammad Ivan Chriana</li>
+            <li class="collection-item">Jl.Sukadamai Blok Pahing RT02/RW02 No.35, Cirebon</li>
             <li class="collection-item">West Java, Indonesia</li>
             </ul>
           </div>
