--- a/index.html
+++ b/index.html
@@ -195,6 +195,15 @@
           <div class="col m3 s12">
             <img src="img/portfolio/Sertif_Cloud_Practitioner.jpg" class="responsive-img materialboxed">
           </div>
+          <div class="col m3 s12">
+            <img src="img/portfolio/Sertificate_Jabar_Coding Camp_1.jpg" class="responsive-img materialboxed">
+          </div>
+          <div class="col m3 s12">
+            <img src="img/portfolio/Sertificate_Jabar_Coding Camp_2.jpg" class="responsive-img materialboxed">
+          </div>
+          <div class="col m3 s12">
+            <img src="img/portfolio/certificate_google-1.jpg" class="responsive-img materialboxed">
+          </div>
         </div>
       </div>
     </section>
