--- a/index.html
+++ b/index.html
@@ -199,6 +199,17 @@
             <img src="img/portfolio/certificate_google-1.jpg" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
+            <img src="img/portfolio/Sertificate-IT-Support-Google-Selesai.jpg" class="responsive-img materialboxed">
+          </div>
+<!--           <div class="col m3 s12">
+            <img src="img/portfolio/Sertificate_Jabar_Coding Camp_1.jpg" class="responsive-img materialboxed">
+          </div>
+          <div class="col m3 s12">
+            <img src="img/portfolio/Sertificate_Jabar_Coding Camp_2.jpg" class="responsive-img materialboxed">
+          </div> -->
+        </div>
+        <div class="row">
+          <div class="col m3 s12">
             <img src="img/portfolio/Sertificate_Jabar_Coding Camp_1.jpg" class="responsive-img materialboxed">
           </div>
           <div class="col m3 s12">
@@ -261,7 +272,7 @@
 
     <!-- Footer -->
     <footer class="blue darken-2 darken-2 white-text center">
-      <p class="flow-text">Muhammad Ivan Chriana. Copyright 2020.</p>
+      <p class="flow-text">Muhammad Ivan Chriana, Copyright 2022.</p>
     </footer>
 
 
