--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
         <li>
           <img src="img/slider/1.png"> 
           <div class="caption left-align">
-            <h3>Tingkatkan Skill!</h3>
-            <h5 class="light grey-text text-lighten-3">Never Give Up</h5>
+            <h3>Selamat Datang Di Website Blogs!</h3>
+            <h5 class="light grey-text text-lighten-3">Selamat Datang Rekruter Perusahaan</h5>
           </div>
         </li>
         <li>
           <img src="img/slider/2.png"> 
           <div class="caption right-align">
-            <h3>Belajar Dengan Giat!</h3>
+            <h3>Selalu Semangat Tingkatkan Skill!</h3>
             <h5 class="light grey-text text-lighten-3">Never Give Up</h5>
           </div>
         </li>
         <li>
           <img src="img/slider/3.png"> 
           <div class="caption center-align">
-            <h3>Kemauan Yang Tinggi!</h3>
+            <h3>Selalu Belajar dan Berkembang!</h3>
             <h5 class="light grey-text text-lighten-3">Never Give Up</h5>
           </div>
         </li>
@@ -79,17 +79,40 @@
           <h3 class="center light grey-text text-darken-3">About Us</h3>
           <div class="col m6">
             <h5>We Are Professional</h5>
-            <p>Saya adalah seorang Web developer, Pentester ataupun Network Engineer, Saya senang jika Saya  dapat bekerja dalam tim maupun individu. Saya Memiliki Skill Yaitu: HTML,CSS,JavaScript, dan PHP.Untuk Framework Saya menggunakan Bootstrap,Materialize dan VueJS.
+            <p>Perkenalkan Nama Saya Muhammad Ivan Chriana Saya adalah Seorang FreshGraduate, Berikut Beberapa Skill yang saya Miliki: <br>
+              Network Engineer : <br> 
+              Configuration Cisco : <br>
+              Switching : VLAN, Switch VLAN Trunking, DTP, Inter VLAN, Allowed VLAN, DHCP VLAN, Inter VLAN MLS, MLS DHCP VLAN, STP, VTP, LACP, PAGP. <br>
+              Routing : Static, NAT Static PAT, RIP, BGP, OSPF
+              <br>
+              IT Support : <br>
+              - Fiber Optic : Knowladge Tools, Configuration with Fast Connector <br>
+              - Configuration Cisco : <br>
+              Switching : VLAN, Switch VLAN Trunking, DTP, Inter VLAN, Allowed VLAN, DHCP VLAN, Inter VLAN MLS, MLS DHCP VLAN, STP, VTP, LACP, PAGP. <br>
+              Routing : Static, NAT Static PAT, RIP, BGP <br>
+              - Sistem Operasi dan Configuration : <br>
+              Basic Command Linux, Sistem File Linux, Instalasi OS Linux (Ubuntu, Debian, Kali Linux), Install Web Server, Scanning (Nmap, Wireshark). <br>
+              - GCP Dan AWS Cloud : Create Instance EC2, Install WordPress, Membagi User Access(IAM). <br>
+              - DevOps Basic: (Git & Github, Install Docker, Install Jenkins) 
+              <br>
+              Front-End Developer : <br>
+              - Git & Github <br>
+              - Basic : HTML, CSS, Javascript, Bootstrap
+              <br>
+              Back-End Developer : <br>
+              Basic : PHP, Database Mysql
+              <br>
+              Saya senang jika Saya dapat Bekerja dalam Tim Ataupun Individu.
             </p>
           </div>
           <div class="col m6 light">
-              <p>WEB DEVELOPMENT - Beginner</p>
-                <div class="progress">
-                  <div class="determinate" style="width: 70%"></div>
-              </div>
-              <p>CYBER SECURITY - Junior</p>
+              <p>WEB Developer - Junior</p>
                 <div class="progress">
                   <div class="determinate" style="width: 50%"></div>
+              </div>
+              <p>CyberSecurity Enthusiast - Junior</p>
+                <div class="progress">
+                  <div class="determinate" style="width: 40%"></div>
               </div>
               <p>Network Engineer - Intermediate</p>
                 <div class="progress">
@@ -228,14 +251,14 @@
         <div class="row">
           <div class="col m5 s12">
             <div class="card-panel blue darken-2 center white-text">
-              <i class="material-icons">email</i>
-              <h5>Contact</h5>
-              <p>Bila Anda Butuh Bantuan,Bisa Langsung Hubungi Saya Ke +62822-1648-5340.</p>
+              <i class="material-icons">Email</i>
+              <h5>Contact Me</h5>
+              <p>Bila Perusahaan Anda Butuh Bantuan,Bisa Langsung Hubungi Saya Ke +62 822-1648-5340.</p>
             </div>
             <ul class="collection with-header">
             <li class="collection-header center"><h4>My Address</h4></li>
             <li class="collection-item">Muhammad Ivan Chriana</li>
-            <li class="collection-item">Jl.Sukadamai Blok Pahing RT02/RW02 No.35, Cirebon</li>
+            <li class="collection-item">Jl.Sukadamai Blok Pahing RT002/RW002 No.35, Kec.Lemahabang, Kab.Cirebon</li>
             <li class="collection-item">West Java, Indonesia</li>
             </ul>
           </div>
@@ -272,7 +295,7 @@
 
     <!-- Footer -->
     <footer class="blue darken-2 darken-2 white-text center">
-      <p class="flow-text">Muhammad Ivan Chriana, Copyright 2022.</p>
+      <p class="flow-text">Copyright 2022, All right reserved, Build By Muhammad Ivan Chriana.</p>
     </footer>
 
 
