--- a/index.html
+++ b/index.html
@@ -107,16 +107,20 @@
           </div>
           <div class="col m6 light">
               <p>WEB Developer - Junior</p>
-                <div class="progress">
-                  <div class="determinate" style="width: 50%"></div>
+              <div class="progress">
+                 <div class="determinate" style="width: 50%"></div>
               </div>
               <p>CyberSecurity Enthusiast - Junior</p>
-                <div class="progress">
-                  <div class="determinate" style="width: 40%"></div>
+              <div class="progress">
+                 <div class="determinate" style="width: 40%"></div>
               </div>
               <p>Network Engineer - Intermediate</p>
-                <div class="progress">
-                  <div class="determinate" style="width: 90%"></div>
+              <div class="progress">
+                 <div class="determinate" style="width: 90%"></div>
+              </div>
+              <p>Cloud Engineer - Junior</p>
+              <div class="progress">
+                 <div class="determinate" style="width: 20%"></div>
               </div>
             </div>
           </div>
