--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-      <title>Van C</title>
+      <title>My Blogs | Profile</title>
     </head>
 
 <body id="home" class="scrollspy">
@@ -51,7 +51,7 @@
         <li>
           <img src="img/slider/1.png"> 
           <div class="caption left-align">
-            <h3>Selamat Datang Di Website Blogs!</h3>
+            <h3>Selamat Datang Di Website Blogs Saya!</h3>
             <h5 class="light grey-text text-lighten-3">Selamat Datang Rekruter Perusahaan</h5>
           </div>
         </li>
