--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="row">
           <div class="col m5 s12">
             <div class="card-panel blue darken-2 center white-text">
-              <i class="material-icons">Email</i>
+              <i class="material-icons">email</i>
               <h5>Contact Me</h5>
               <p>Bila Perusahaan Anda Butuh Bantuan,Bisa Langsung Hubungi Saya Ke +62 822-1648-5340.</p>
             </div>
