--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#home" class="brand-logo">Van C</a>
         <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#about">Abot Us</a></li>
+          <li><a href="#about">About Me</a></li>
           <li><a href="#clients">Client</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Sertifikat</a></li>
