--- a/index.html
+++ b/index.html
@@ -79,31 +79,43 @@
           <h3 class="center light grey-text text-darken-3">About Us</h3>
           <div class="col m6">
             <h5>We Are Professional</h5>
-            <p>Perkenalkan Nama Saya Muhammad Ivan Chriana Saya adalah Seorang FreshGraduate, Berikut Beberapa Skill yang saya Miliki: <br>
-              Network Engineer : <br> 
+            <p>Perkenalkan Nama Saya Muhammad Ivan Chriana Saya Merupakan Seorang FreshGraduate yang sangat Suka di dunia IT <br> 
+              Berikut Beberapa Skill yang saya Miliki: <br>
+              <h6>Network Engineer :</h6> <br> 
               Configuration Cisco : <br>
               Switching : VLAN, Switch VLAN Trunking, DTP, Inter VLAN, Allowed VLAN, DHCP VLAN, Inter VLAN MLS, MLS DHCP VLAN, STP, VTP, LACP, PAGP. <br>
               Routing : Static, NAT Static PAT, RIP, BGP, OSPF
               <br>
-              IT Support : <br>
+              <h6>IT Support :</h6> <br>
               - Fiber Optic : Knowladge Tools, Configuration with Fast Connector <br>
               - Configuration Cisco : <br>
               Switching : VLAN, Switch VLAN Trunking, DTP, Inter VLAN, Allowed VLAN, DHCP VLAN, Inter VLAN MLS, MLS DHCP VLAN, STP, VTP, LACP, PAGP. <br>
               Routing : Static, NAT Static PAT, RIP, BGP <br>
               - Sistem Operasi dan Configuration : <br>
-              Basic Command Linux, Sistem File Linux, Instalasi OS Linux (Ubuntu, Debian, Kali Linux), Install Web Server, Scanning (Nmap, Wireshark). <br>
+              Basic Command Linux, Sis, Instalasi OS Linux (Ubuntu, Debian, Kali Linux), Install Web Server, Scanning (Nmap, Wireshark). <br>
               - GCP Dan AWS Cloud : Create Instance EC2, Install WordPress, Membagi User Access(IAM). <br>
               - DevOps Basic: (Git & Github, Install Docker, Install Jenkins) 
               <br>
-              Front-End Developer : <br>
+              <h6>Front-End Developer :</h6> <br>
               - Git & Github <br>
               - Basic : HTML, CSS, Javascript, Bootstrap
               <br>
-              Back-End Developer : <br>
+              <h6>Back-End Developer :</h6> <br>
               Basic : PHP, Database Mysql
               <br>
               Saya senang jika Saya dapat Bekerja dalam Tim Ataupun Individu.
             </p>
+            <h6>System Administrator :</h6>
+              <p>
+                Sistem Operasi Installer: <br>
+                Ubuntu,CentOS, Redhat Linux, Kali Linux <br>
+                Virtualisasi : <br>
+                VMWare ESXi 7.0U1,2,3 , VirtualBox, VMWare Workstation <br>
+                Basic Configuration : <br>
+                Network Konfigurasi, SSH, DNS, WEB SERVER(Nginx,Apache2), Database (MariaDB,MySQL), Load Balance(HAproxy), Monitoring(Zabbix), Storage Server(NFS,iSCSI,GlusterFS), Mail Server, Samba Server. <br>
+                 
+              </p>
+            <br>
           </div>
           <div class="col m6 light">
               <p>WEB Developer - Junior</p>
@@ -122,6 +134,10 @@
               <div class="progress">
                  <div class="determinate" style="width: 20%"></div>
               </div>
+              <p>System Administrator - Advance</p>
+              <div class="progress">
+                 <div class="determinate" style="width: 100%"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -133,7 +149,7 @@
       <div class="parallax"><img src="img/slider/4.png"></div>
 
       <div class="container clients">
-        <h3 class="center light white-text">Our Clients</h3>
+        <h3 class="center light white-text">Clients</h3>
         <div class="row">
           <div class="col m4 center s12">
             <img src="img/clients/gojek.png">
@@ -330,4 +346,3 @@
       </script>
     </body>
   </html>
-        
