--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                 VMWare ESXi 7.0U1,2,3 , VirtualBox, VMWare Workstation <br>
                 Basic Configuration : <br>
                 Network Konfigurasi, SSH, DNS, WEB SERVER(Nginx,Apache2), Database (MariaDB,MySQL), Load Balance(HAproxy), Monitoring(Zabbix), Storage Server(NFS,iSCSI,GlusterFS), Mail Server, Samba Server. <br>
-                 
+                <br> 
+                Saya senang jika Saya dapat Bekerja dalam Tim Ataupun Individu.
               </p>
             <br>
-          Saya senang jika Saya dapat Bekerja dalam Tim Ataupun Individu.
           </div>
           <div class="col m6 light">
               <p>WEB Developer - Junior</p>
@@ -252,6 +252,12 @@
           </div> -->
         </div>
         <div class="row">
+          <div class="col m3 s12">
+            <img src="img/portfolio/NSE1-NetworkSecurityAssociate_page-0001.jpg" class="responsive-img materialboxed">
+          </div>
+          <div class="col m3 s12">
+            <img src="img/portfolio/Sertifikat-Linux-Fundamental-IDN_page-0001.jpg" class="responsive-img materialboxed">
+          </div>
           <div class="col m3 s12">
             <img src="img/portfolio/Sertificate_Jabar_Coding Camp_1.jpg" class="responsive-img materialboxed">
           </div>
